--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1 style="text-align: center; margin: auto;">Hola Mundo!</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium sapiente nostrum adipisci maxime mollitia iure quasi deserunt animi, voluptatum recusandae magnam minima consequuntur earum, explicabo eos deleniti labore expedita.</p>
+        <a href="www.google.com"><p>Enlace Google</p></a>
+    </div>
 </body>
 </html>
