--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba GIT</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
     <h1 style="text-align: center; margin: auto;">Hola Mundo!</h1>
     <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium sapiente nostrum adipisci maxime mollitia iure quasi deserunt animi, voluptatum recusandae magnam minima consequuntur earum, explicabo eos deleniti labore expedita.</p>
-        <a href="www.google.com"><p>Enlace Google</p></a>
+        <div id="mav">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium sapiente nostrum adipisci maxime mollitia iure quasi deserunt animi, voluptatum recusandae magnam minima consequuntur earum, explicabo eos deleniti labore expedita.</p>
+            <img id="cap"src="./5c2ba26bd562c07099619d863a288a46.jpg" alt="poot">
+        </div>
     </div>
 </body>
 </html>
